# wisent

./: .commitlintrc.json  .gitignore  .gitlab-ci.yml  Cargo.toml  README.md  codecov.yml  package.json  rustfmt.toml
.circleci/: config.yml
.github/workflows/: ci.yml
benches/: generator_bench.rs
bootstrap/: antlr.bootstrap
corelib/: Cargo.toml
corelib/src/: lib.rs
doc/images/: dfa.dot  nfa.dot
resources/: comment_rich_grammar.txt  fragments_case_err.txt  fragments_grammar.txt  fragments_syntax_err.txt  lexer_actions_harder.txt  lexer_actions_simpler.txt  lexer_cyclic.txt  lexer_invalid_action.txt  lexer_skeleton.txt  simple_grammar.txt
src/: bootstrap.rs  error.rs  lib.rs  macros.rs  main.rs
src/core/: error.rs  grammar.rs  grammar_bootstrap.rs  grammar_tests.rs  lexer.rs  lexer_tests.rs  lib.rs
src/core/tests/: grammar.rs  lexer.rs
src/grammar/: boostrap_grammar  bootstrap.rs  ebnf.rs  gen_char_class.py  mod.rs  old_bootstrap.rs
src/lexer/: conversion.rs  dfa.rs  grammar_conversion.rs  mod.rs  nfa.rs  simulator.rs  ureader.rs
src/parser/: conversion.rs  ll.rs  lr.rs  mod.rs  simulator.rs
tests/: integration.rs
