[package]
name = "wisent"
version = "0.1.0"
authors = ["Davide Pizzolotto <davide.pizzolotto@gmail.com>"]
edition = "2021"
publish = false

[lib]
name = "wisent"
path = "src/lib.rs"

[profile.release]
lto = "fat"
strip = true

[dependencies]
regex = "1.6"
maplit = "1.0"
rustc-hash = "1.1"

[dev-dependencies]
criterion = "0.4"
tempfile = "3.3"

[[bench]]
name = "generator_bench"
harness = false
