[package]
name = "wisent"
version = "0.1.0"
authors = ["Davide Pizzolotto <davide.pizzolotto@gmail.com>"]
edition = "2021"
publish = false

[lib]
name = "wisent"
path = "src/lib.rs"

[[bin]]
name = "wisent-generator"
path = "src/main.rs"
required-features = ["parser_generator"]

[profile.release]
lto = "fat"
strip = true

[dependencies]
maplit = "1.0"
rustc-hash = "1.1"
clap = {version="4.1", features=["derive"], optional=true}
serde = {version = "1.0", features=["derive"]}
serde_json = {version = "1.0", optional=true}
bincode = {version = "1.3", optional=true}

[dev-dependencies]
criterion = "0.4"
tempfile = "3.3"

[[bench]]
name = "generator_bench"
harness = false

[features]
default = []
trace_parser = []
parser_generator = ["serde_json", "clap", "bincode"]
